team link project

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css" />
     <!-- VANTA.js for animated background -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.waves.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.waves.min.js"></script> -->
     <!-- Devicon for programming language icons -->
     <link
       rel="stylesheet"
